2007-08-24  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.c: don't use g_slice_dup(), that's
	in GLib 2.14 only.

2007-08-24  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: s/compute_sample/box_filter/.

2007-08-24  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.c: allocate shell->highlight with
	GSlice.

2007-08-24  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: swapped center and middle
	terms around (now center means horizontal (betwen left and right )and
	middle means vertical (between top and bottom)).

2007-08-24  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: (compute_sample): removed
	a temporary variable, simplified logic slightly.
	(render_image_tile_fault, render_image_tile_fault_one_row): moved
	sum computation out of loop.

2007-08-24  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: Replaced signed integres with
	unsigned ones for weights etc to gain some additional bits of
	precision. Enabled anti-aliasing for zoomlevels between 100% and 200%
	to improve the smoothness of the display at the levels where the size
	differences between pixels yields the most distracting artifacts.

2007-08-24  Øyvind Kolås  <pippin@gimp.org>

	Reshuffled shifting code in fixed point code of display to improve
	quality.

	* app/display/gimpdisplayshell-render.c:
		(compute_sample): reshuffle a bit of the fixed point induced
		shifting to allow higher precision.
		(render_image_tile_fault): remove need to disable box-filter
		for some non square zoom ratios that was needed before
		compute_sample cleanup.
		, (render_image_tile_fault_one_row): fetch source sample #1
		from the correct tile.

2007-08-24  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/scatter_hsv.c: stylistic cleanup.

2007-08-24  Jakub Friedl  <jfriedl@suse.cz>

	* plug-ins/common/scatter_hsv.c: fixing
	bug #469519 and some cleanup.
